@@ -97,13 +97,13 @@ set variables(BADBITRATE)                   "%pf %u_name %g_name %bitrate"
 set variables(BADGENRE)                     "%pf %u_name %g_name %genre"
 set variables(BADYEAR)                      "%pf %u_name %g_name %year"
 set variables(COMPLETE_AUDIO_CBR)           "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %genre %year %bitrate %sampling %mode %audio %artist %album %title %codec %layer %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
-set variables(COMPLETE_AUDIO_VBR)           "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
+set variables(COMPLETE_AUDIO_VBR)           "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping %vbr_stereomode %vbr_unwise %vbr_source %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
 set variables(COMPLETE_OTHER)               "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
 set variables(COMPLETE_RAR)                 "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %filename %u_tagline %compression %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
 set variables(COMPLETE_VIDEO)               "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
 set variables(COMPLETE_ZIP)                 "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_name %g_name %filename %u_tagline %g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed %u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup"
 set variables(COMPLETE_STAT_RACE_AUDIO_CBR) "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %genre %year %bitrate %sampling %mode %audio %artist %album %title %codec %layer %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
-set variables(COMPLETE_STAT_RACE_AUDIO_VBR) "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
+set variables(COMPLETE_STAT_RACE_AUDIO_VBR) "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping %vbr_stereomode %vbr_unwise %vbr_source %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
 set variables(COMPLETE_STAT_RACE_OTHER)     "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
 set variables(COMPLETE_STAT_RACE_RAR)       "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} %compression {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
 set variables(COMPLETE_STAT_RACE_VIDEO)     "%pf %releasename %t_mbytes %t_files %t_avgspeed %r_avgspeed %t_duration %u_count %g_count %u_slowest_name %u_slowest_gname %u_slowest_speed %u_fastest_name %u_fastest_gname %u_fastest_speed %u_winner_name %u_winner_gname %u_winner_mbytes %u_winner_files %u_winner_percent %u_winner_avgspeed %g_winner_name %g_winner_mbytes %g_winner_files %g_winner_percent %g_winner_avgspeed %filename {%r_name %r_gname} {%g_racer_position %g_racer_name %g_racer_mbytes %g_racer_files %g_racer_percent %g_racer_avgspeed} {%u_racer_position %u_racer_name %g_racer_name %u_racer_mbytes %u_racer_files %u_racer_percent %u_racer_avgspeed %u_racer_dayup %u_racer_wkup %u_racer_monthup %u_racer_allup}"
@@ -138,7 +138,7 @@ set variables(SFV_VIDEO)                    "%pf %releasename %t_filecount %u_na
 set variables(UPDATE_CBR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %genre %year %bitrate %sampling %mode %audio %artist %album %title %codec %layer %t_timeleft"
 set variables(UPDATE_OTHER)                 "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
 set variables(UPDATE_RAR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %compression %t_timeleft"
-set variables(UPDATE_VBR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %t_timeleft"
+set variables(UPDATE_VBR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping %vbr_stereomode %vbr_unwise %vbr_source %t_timeleft"
 set variables(UPDATE_VIDEO)                 "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
 set variables(UPDATE_ZIP)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
 
